Fixed card header. Fixed Popover alignment.

--- a/src/css/button.scss
+++ b/src/css/button.scss
@@ -704,7 +704,7 @@
   color: $btn-plain-color;
 
   svg {
-    fill: $btn-plain-svg-icon-color;
+    fill: $btn-plain-color;
   }
 
   &:active {
